@@ -3,6 +3,9 @@ cxbx website: http://www.caustik.com/xbox/
 version: 0.7.9 (??/??/??)
 --------------------------------
 
+- DirectSound support! Turok and Stella (Atari 2600 emulator)
+  are both able to play sound+music, works great!
+
 - Fixed start/back mapping problem :)
 
 - Absurd amounts of new code, including general code cleanup
